--- a/Calculating/MainWindow.xaml
+++ b/Calculating/MainWindow.xaml
@@ -6,7 +6,50 @@
         xmlns:local="clr-namespace:Calculating"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+    <Grid x:Name="container" Background="Aqua">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label  Grid.Row="0"  Grid.ColumnSpan="4" x:Name="mainLabel" FontSize="36" HorizontalAlignment="Right" >0</Label>
+        <TextBlock  Grid.Row="0" Grid.Column="5" Grid.RowSpan="7" Grid.ColumnSpan="2" x:Name="historyLabel" FontSize="20" HorizontalAlignment="Right"></TextBlock>
+        <Button Grid.Row="1" Grid.Column="0">%</Button>
+        <Button Grid.Row="1" Grid.Column="1">CE</Button>
+        <Button Grid.Row="1" Grid.Column="2">C</Button>
+        <Button Grid.Row="1" Grid.Column="3">backspace</Button>
+        <Button Grid.Row="2" Grid.Column="0">1/x</Button>
+        <Button Grid.Row="2" Grid.Column="1">x^2</Button>
+        <Button Grid.Row="2" Grid.Column="2">sqrt(x)</Button>
+        <Button Grid.Row="2" Grid.Column="3">/</Button>
+        <Button Grid.Row="3" Grid.Column="0">7</Button>
+        <Button Grid.Row="3" Grid.Column="1">8</Button>
+        <Button Grid.Row="3" Grid.Column="2">9</Button>
+        <Button Grid.Row="3" Grid.Column="3">X</Button>
+        <Button Grid.Row="4" Grid.Column="0">4</Button>
+        <Button Grid.Row="4" Grid.Column="1">5</Button>
+        <Button Grid.Row="4" Grid.Column="2">6</Button>
+        <Button Grid.Row="4" Grid.Column="3">-</Button>
+        <Button Grid.Row="5" Grid.Column="0">1</Button>
+        <Button Grid.Row="5" Grid.Column="1">2</Button>
+        <Button Grid.Row="5" Grid.Column="2">3</Button>
+        <Button Grid.Row="5" Grid.Column="3">+</Button>
+        <Button Grid.Row="6" Grid.Column="0">+/-</Button>
+        <Button Grid.Row="6" Grid.Column="1">0</Button>
+        <Button Grid.Row="6" Grid.Column="2">,</Button>
+        <Button Grid.Row="6" Grid.Column="3">=</Button>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="-108,-16,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
